fix:版权支持html字符串

--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -363,7 +363,7 @@ body {
 					</div>
 					<div class="copy-info">
 						<hr>
-						<div>{{apis.project.copyright}}</div>
+						<div v-html="apis.project.copyright"></div>
 					</div>
 				</div>
 			</div>
