fix:接口参数描述支持html内容

--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -293,9 +293,7 @@ body {
 												<tr v-for="param in it.params" v-if="!param.ignore">
 													<td class="code">{{param.paramName || param.paramLocalName}}</td>
 													<td>{{param.typeName}}</td>
-													<td>
-														<p>{{param.description}}</p>
-													</td>
+													<td v-html="param.description"></td>
 													<td  v-if="it.requestBody"><pre>{{param.requestData}}</pre></td>
 													<td  v-else>{{param.requestData}}</td>
 													<td>
