zCron 支持了 set_part 功能

--- a/nutz-plugins-zcron/src/main/js/zcron_test.html
+++ b/nutz-plugins-zcron/src/main/js/zcron_test.html
@@ -16,8 +16,9 @@ html {
 body {margin: 20px;}
 .OK {color:#0F0;}
 .KO {color:#F00;}
-em {opacity: 0.4;}
+em {opacity: 0.4;font-style:normal;}
 b{color:#0FF;}
+u{color:#F0F; text-decoration: none;}
 </style>
 </head>
 <body class="zui-app-wn_browser ui-body" appnm="wn.browser">
