--- a/nutz-plugins-zdoc/src/main/resources/org/nutz/plugins/zdoc/html/dft_tmpl_index.html
+++ b/nutz-plugins-zdoc/src/main/resources/org/nutz/plugins/zdoc/html/dft_tmpl_index.html
@@ -1,1 +1,12 @@
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>${title}</title>
+</head>
+<body>
 ${indexes}
+</body>
+</html>
