--- a/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
+++ b/nutz-plugins-apidoc/src/main/resources/org/nutz/plugins/apidoc/index.html
@@ -373,6 +373,7 @@ body {
 <script src="https://cdn.jsdelivr.net/jquery/3.1.0/jquery.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"
 	type="text/javascript"></script>
+	<script type="text/javascript" src="//res.layui.com/layui/release/layer/dist/layer.js?v=3111"></script>
 <script type="text/javascript">
 	var vueApp = new Vue(
 		{
@@ -409,7 +410,10 @@ body {
 				debugCall : function(it) {
 					var scheme_name = location.protocol == "http:" ? "http" : "https";
 					if (!document.getElementById("dhc")) {
-						layer.alert("未安装DHC");
+						if (layer)
+							layer.alert("未安装DHC");
+						else
+							alert("未按照DHC");
 						return;
 					}
 					var bodyType = "Form";
